se agregaron lineas paar automatizar la pruebas sin 2fa y se agregaron dependencia al pom como allure, maven surefire  para la automatizacion con testrail